hero image stretch fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,12 +50,14 @@ p {
     font-size: 16px;
 }
 
+/* OBJECT FIT COVER FOUND ON STACK OVERFLOW */
 .hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
+    object-fit: cover;
 }
 
 .float-left {
